--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 dataclasses-json==0.5.14
-duckduckgo-search==3.8.5
+duckduckgo_search==6.1.7
 exceptiongroup==1.2.1
 frozenlist==1.4.1
 gitdb==4.0.11
@@ -43,6 +43,7 @@ mypy-extensions==1.0.0
 numexpr==2.10.1
 numpy==1.26.4
 openai==0.28.0
+orjson==3.10.5
 packaging==23.2
 pandas==2.2.2
 Pillow==9.5.0
@@ -53,6 +54,7 @@ pydantic_core==2.18.4
 pydeck==0.9.1
 Pygments==2.18.0
 Pympler==1.0.1
+pyreqwest_impersonate==0.4.8
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytz==2024.1
